# LaBRADOR-SNARK

./: Cargo.toml  LICENSE  README.md  flake.nix  perf.data  perf.data.old
.github/workflows/: rust.yml
benches/: labrador_perf.rs  ntt_speed.rs
labrador-snark/: Cargo.toml
labrador-snark/src/: main.rs  thesis.code-workspace
security/: estimate.sage
src/: '  algebraic.rs  constants.rs  lib.rs  main copy.rs  main.rs  perf.rs  proofgen.rs  recursion.rs  structs.rs  util.rs  verification.rs
tests/: proptest.proptest-regressions  proptest.rs  res
