[package]
name = "labrador_snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "LaBRADOR_SNARK"
path = "src/main.rs"

[[bench]]
name = "LaBRADOR_perf"
path = "benches/ntt_speed.rs"
harness = false


[dependencies]
ff = "0.13"
polynomial = "0.2.5"
nalgebra = "*"
rand = "0.8.4"
abstalg = "0.1.4"
ndarray = "0.15.6"
ndarray-linalg = "0.16.0"
lazy_static = "1.4.0"
concrete-ntt = "0.1.1"
once_cell = "1.19.0"
proptest = "1.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num-prime = "0.4.3"

[dev-dependencies]
criterion = "0.3"
#proptest = "1.4.0"

[profile.release]
debug = true
